added layout && api calls to backend

--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,1 +1,8 @@
-<p>overview works!</p>
+<app-nav></app-nav>
+
+<mat-grid-list cols="4" >
+    <mat-grid-tile   colspan="1" rowspan="1" background="'red'">
+      <app-latest-measurement [measurement]="measurement" ></app-latest-measurement>
+    </mat-grid-tile>
+    
+  </mat-grid-list>
