--- a/src/app/components/latest-measurement/latest-measurement.component.html
+++ b/src/app/components/latest-measurement/latest-measurement.component.html
@@ -1,1 +1,12 @@
-<p>latest-measurement works!</p>
+<mat-card class="example-card" >
+    <mat-card-header>
+      <div mat-card-avatar class="header"></div>
+      <mat-card-title>Leuven</mat-card-title>
+      <mat-card-subtitle>laatste meeting</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p class="main-measurement">Temperature: {{measurement.temperature}}°</p>
+        <p class="sub-measurement">Humidity: {{measurement.humidity}}%</p>
+        <p class="sub-measurement">Pressure: {{measurement.pressure}} hPA</p>
+    </mat-card-content>
+  </mat-card>   
